[4.20.24]
* Bug fixes and improvements.
Further tweaks to layer view shader on Raspberry Pi builds.
Reverse bridge skins printing order which will help adhesion when bridges have multiple layers.
Fix combing when Avoid Printed Parts When Travelling is enabled.
Remove libwayland-egl.so.1 and libwayland-cursor.so.0 from appimage.

[4.20.23]
* Bug fixes and improvements.
Renamed Infill Prime Amount Per MM Travelled and Infill Prime Travel Power settings to be Infill Extra Prime Amount Per MM Travelled and Infill Extra Prime Travel Power.
Improve zig-zag skin monotonic ordering.
Other minor fixes.
* New Features
Added Retraction Extra Prime Amount Per MM Travelled and Retraction Extra Prime Travel Power settings to counteract the underextrusion that can occur at the start of printing anything except infill.
Added Skin Edge Support Density and Skin Edge Support Line Distance settings to completely fill infill layer below skin regions. Visible when Skin Edge Support Layers is set to 1.
Added Z Hop Only Over Roofing setting to cause travel moves over visible skin areas to be z hopped. Visible when Z Hop When Retracted is off.

[4.20.22]
* Bug fixes and improvements.
Now provides skin edge support when using multi-layer infill.
Now provides monotonic ordering when printing zig-zag skin pattern.
Now outputs extruder printing and standby temperatures as gcode comments.
Reworked layer view shader on Raspberry Pi builds.
* New Features
Added Two Pass Outer Wall setting to print outer wall as two half-height walls stacked vertically.

[4.20.21]
* Bug fixes and improvements.
Added Vertex Meld Distance setting to allow a previously hard-coded value be altered - vertices that are closer than this distance are considered to be the same vertex.
Possibly fixed the problem where the slice button is missing when a model/project is loaded after a g-code file has been loaded.
Now checks for new smartavionics releases rather than new Ultimaker releases.

[4.20.20]