@@ -407,6 +407,7 @@ vertex_meld_distance
 
 [blackmagic]
 process_layers_sequentially
+mesh_priority
 print_sequence
 infill_mesh
 infill_mesh_order
