@@ -88,6 +88,7 @@ vertex_meld_distance
 
 [blackmagic]
 process_layers_sequentially
+mesh_priority
 spiral_bottom_layers_get_extra_walls
 spiralize_min_line_width
 spiralize_max_line_width
